getHint endpoint
