# docs/swagger.json
@@ -12,6 +12,22 @@
     "host": "localhost:5050",
     "basePath": "/",
     "paths": {
+        "/getHint": {
+            "get": {
+                "description": "Get a hint towards the daily movie",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movie"
+                ],
+                "summary": "Hint",
+                "responses": {}
+            }
+        },
         "/getMovieDetails": {
             "get": {
                 "description": "Get a movie with extensive details using it's ID",
